--- a/client/src/components/create.css
+++ b/client/src/components/create.css
@@ -1,19 +1,30 @@
-.workout {
+.workout-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 92vh;
 }
 
-.form-area {
+.workout {
+    display: flex;
+    flex-direction: column;
     border: 1px solid black;
     width: 80%;
     margin-top: 20px;
     margin-bottom: 20px;
-    /* height: 100vh; */
 }
 
-.form-group {
-    margin-bottom: 10px;
+.create > .card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#name {
+    width: fit-content;
+}
+
+#description {
+    width: 50%;
 }
