last commit before changing to general workout app

--- a/client/src/components/rep.css
+++ b/client/src/components/rep.css
@@ -27,13 +27,13 @@
 .intervals {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
     /* height: 30px; */
 
 }
 
 .add-interval {
-    width: 20px;
-    margin: 2px;
+    border-radius: 5px;
 }
 
 .interval-num {
