--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,13 @@
+:root {
+    --font-size: 16px;
+    --line-height: 30px;
+}
+
 .app {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
+    font-size: 16px;
+    line-height: 30px;
 }
