--- a/client/src/components/rep.css
+++ b/client/src/components/rep.css
@@ -1,13 +1,39 @@
+* {
+    box-sizing: border-box;
+}
+
 .rep {
+    border: 1px solid red;
     display: flex;
-    width: 100%;
     flex-direction: row;
 }
 
-.rep > * {
-    margin: 3px;
+.rep input, .rep textarea {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.rep-item {
+    border: 1px solid black;
+    height: 2em;
+}
+
+.num-reps, .dist {
+    width: 10%;
+    text-align: center;
 }
 
 .rep-description {
-    flex: 2;
-  }
+    line-height: 1.5;
+    flex:auto;
+    height: auto;
+}
+
+.intervals-container {
+    width: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
