--- a/client/src/components/round.css
+++ b/client/src/components/round.css
@@ -1,24 +1,52 @@
 .round {
     margin-bottom: 10px;
+    padding-top: 0px;
 }
 
 .round > .card-body {
     display: flex;
 }
 
-.reps {
+.num-x {
     display: flex;
-    flex-direction: column;
-    border-left: 2px solid gray;
-    border-radius: 5px;
-    padding: 5px;
-    margin-left: 30px;
+    flex-direction: row;
+    width: 10%;
+}
+
+.round-num {
+    /* height: var(--line-height); */
+    height: 2em;
+    border: 1px solid black;
+    padding:0px;
+}
+
+.round-num > .number-input-toggle{
     width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+
+.x {
+    height: 2em;
+    border: 1px solid black;
+    padding:0px;
+}
+
+.reps-area {
+    width: 88%;
+}
+
+.reps {
+    width: 100%;
+    text-align: center;
 }
 
 .add-rep {
-    width: 100px;
+    height: 2em;
 }
+
+
+
 
 
 
