--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 :root {
     --font-size: 16px;
-    --line-height: 30px;
+    --line-height: = calc(16px*1.5);
 }
+
 
 .app {
     width: 100vw;
@@ -9,5 +10,6 @@
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.5;
+    
 }
