--- a/client/src/components/rep.css
+++ b/client/src/components/rep.css
@@ -1,22 +1,18 @@
-* {
-    box-sizing: border-box;
-}
-
 .rep {
-    border: 1px solid red;
     display: flex;
     flex-direction: row;
 }
 
-.rep input, .rep textarea {
-    width: 100%;
-    height: 100%;
-    text-align: center;
+.rep-item {
+    display: flex;
+    flex-direction: row;
+    height: 34px;
+    align-items: center;
+    /* border: 1px solid red; */
 }
 
-.rep-item {
-    border: 1px solid black;
-    height: 2em;
+.rep input, .rep textarea {
+    text-align: center;
 }
 
 .num-reps, .dist {
@@ -24,16 +20,40 @@
     text-align: center;
 }
 
-.rep-description {
-    line-height: 1.5;
-    flex:auto;
-    height: auto;
+.num-reps > input {
+    text-align: right;
 }
 
-.intervals-container {
-    width: 10%;
+.by {
+    margin-right: 15px;
+}
+
+.dist > input {
+    text-align: left;
+}
+
+.rep-description {
+    flex:auto;
+    text-align: left;
+}
+
+.rep-description > textarea {
+    text-align: left;
+}
+
+.intervals {
+    flex-basis: 30%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
+.add-interval {
+    height: 100%;
+}
+
+.interval-num {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
