--- a/client/src/components/round.css
+++ b/client/src/components/round.css
@@ -8,32 +8,30 @@
 }
 
 .num-x {
+    width: 10%;
     display: flex;
     flex-direction: row;
-    width: 10%;
+    height: 32px;
 }
 
 .round-num {
-    /* height: var(--line-height); */
-    height: 2em;
-    border: 1px solid black;
-    padding:0px;
-}
-
-.round-num > .number-input-toggle{
-    width: 100%;
     height: 100%;
-    margin: 0px;
+    /* border: 1px solid black; */
+    padding:0px;
+    width: 90%;
 }
 
 .x {
     height: 2em;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding:0px;
 }
 
 .reps-area {
+    margin-left: 15px;
     width: 88%;
+    border-left: 1px solid black;
+    border-radius: 5px;
 }
 
 .reps {
@@ -42,7 +40,7 @@
 }
 
 .add-rep {
-    height: 2em;
+    height: 32px;
 }
 
 
