--- a/client/src/components/round.css
+++ b/client/src/components/round.css
@@ -28,19 +28,26 @@
 }
 
 .reps-area {
+    display: flex;
+    flex-direction: column;
     margin-left: 15px;
     width: 88%;
-    border-left: 1px solid black;
-    border-radius: 5px;
 }
 
 .reps {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     text-align: center;
+    border-left: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 5px;
 }
 
 .add-rep {
     height: 32px;
+    width: 20%;
+    border-radius: 5px;
 }
 
 
