--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
 :root {
     --font-size: 16px;
-    --line-height: = calc(16px*1.5);
+    --line-height: calc(16px*1.5);
+    --navbar-height: 60px;
+    --body-height: calc(100vh - var(--navbar-height))
 }
 
 
@@ -11,5 +13,4 @@
     flex-direction: column;
     font-size: 16px;
     line-height: 1.5;
-    
 }
