--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: rgb(131, 131, 131);
-    height: 8vh;
+    height: var(--navbar-height);
 }
 
 .create-workout {
@@ -8,7 +8,7 @@
     border-radius: 5px;
     background-color: white;
     padding: 3px;
-    height: 40px;
+    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
