fixed seconds only interval and now displays mm:ss

--- a/client/src/components/create.css
+++ b/client/src/components/create.css
@@ -24,24 +24,24 @@
 }
 
 .line-stats {
-    width: 25%;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 15px;
-    margin-left: 0px;
-    padding: 15px;
-    background-color: white;
-}
-
-.workout-stats {
     height: 25%;
     border: 1px solid black;
     border-radius: 5px;
     margin: 15px;
     margin-top: 0px;
+    padding: 15px;
+    background-color: white;
+}
+
+.workout-stats {
+    width: 25%;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 15px;
+    margin-left: 0px;
     background-color: white;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
