--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -3,12 +3,14 @@
     height: var(--navbar-height);
 }
 
-.create-workout {
-    border: 2px solid black;
+.navbar-item {
+    height: 35px;
+    text-align: center;
+    padding-top: 5px;
+    border: 1px solid black;
     border-radius: 5px;
     background-color: white;
-    padding: 3px;
-    height: 35px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
