i think the time formatting is acually fixed now...

--- a/client/src/components/create.css
+++ b/client/src/components/create.css
@@ -45,3 +45,10 @@
     align-items: center;
     justify-content: space-around;
 }
+
+.time-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
